--- a/dsa210machineLearning.ipynb
+++ b/dsa210machineLearning.ipynb
@@ -407,7 +407,7 @@
     "Unlike the previous dataset, this dataset contains direct user interaction metrics\n",
     "such as views, likes, comments, and shares, and allows testing whether direct engagement metrics contain predictive signal beyond descriptive metadata\n",
     "\n",
-    "We therefore evaluate whether these features can predict the overall engagement score."
+    "Therefore, I will evaluate whether these features can predict the overall engagement score."
    ]
   },
   {
